# Oxymetre_de_pouls-Makefile-

./: CMakeLists.txt  Data.txt  Makefile  affichage.c  affichage.h  define.h  fichiers.c  fichiers.h  fir.c  fir.h  iir.c  iir.h  integration.c  integration.h  lecture.c  lecture.h  main.c  mesure.c  mesure.h  oxymetre
